--- a/public/dashboards/index.html
+++ b/public/dashboards/index.html
@@ -6,68 +6,51 @@
 <meta http-equiv="Pragma" content="no-cache">
 
 <link rel="stylesheet" href="/css/960/reset.css"> 
-<link rel="stylesheet" href="/css/960/960.css"> 
-<link rel="stylesheet" href="/css/960/text.css"> 
-<link rel="stylesheet" href="/css/gadgets.css">
 <link rel="stylesheet" href="/css/dashboard.css">
 
-<script src="/js/underscore.js" type="text/javascript"></script>
-<script src="/js/backbone.js" type="text/javascript"></script>
-<script src="/js/logs.js" type="text/javascript"></script>
-<script src="/js/astroObjectLib.js" type="text/javascript"></script>
-<script src="/js/helpers.js" type="text/javascript"></script>
-<script src="/js/gadget.js" type="text/javascript"></script>
-<script src="/js/layoutManager.js" type="text/javascript"></script> 
-<script src="/js/dataset.js" type="text/javascript"></script> 
-<script src="/js/renderer.js" type="text/javascript"></script>
-<script src="/js/dashboard.js" type="text/javascript"></script>
+<link rel="stylesheet" href="/css/aristo/jquery-ui-1.8.7.custom.css">
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.11/jquery-ui.min.js"></script>
+
+
 <script type="text/javascript">
+$(function(){
+  $('#linkButton').button();
+});
 
-var ASCOT = ASCOT || {};
-
-var gadgetsPath = '/gadgets/';
-
-var gadgetFiles = [
-  'skyView.html',
-  'nameResolver.html',
-  'dataSetSelector.html',
-  'dataInquirer.html',
-  'tableView.html',
-  'plotView.html'
-];
-
-function initDashboard() {
-
-  ASCOT.dashboard = new UW.Dashboard($("#" + 'dashboard').get(0));
-  
-  for(var i = 0; i < gadgetFiles.length; i++)
-    var newGadget = ASCOT.dashboard.addGadget(gadgetsPath +  gadgetFiles[i]);
-    
-  ASCOT.dashboard.renderGadgets();
-  
-};
+function requestNewDashboard() {
+  $.ajax({
+    url: '/newDashboard/',
+    type: 'POST',
+    success: function(newId) { document.location.href = "/dashboards/" + newId; }
+  });
+}
 
 </script>
+
+<style type="text/css">
+
+.centered{
+    margin: 0 auto;
+    width: 284px;
+}
+
+.loginButton{
+-moz-box-shadow: 0 0 8px rgba(0, 0, 0, 0.15), 0 1px 0 rgba(255,255,255,0.8) inset; 
+-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.15), 0 1px 0 rgba(255,255,255,0.8) inset;
+}
+
+</style>
+
+
 </head>
-<body onLoad="initDashboard();">
-  <header>
-  <div class="container_12 clearfix">
-    <div class="grid_12">
-      <h1>
-        <a href="/dashboards/" title="Astronomical Collaborative Toolkit">Astronomical Collaborative Toolkit</a>
-      </h1>
-      <nav>
-        <ul>
-          <li>
-            <a href="#" title="shareDashboard" onClick="ASCOT.dashboard.saveState();">Share</a>
-          </li>
-        </ul>
-      </nav>
-    </div>			
-  </div>
-  </header>
-  <div id="dashboard" class="container_12 dashboard"></div>
+<body>
+    <div style="top: 25%; width: 100%; position: absolute; margin: 0 auto">
+      <img src="/dashboards/images/ascotLogoBig.png" class="centered" style="display: block"> 
+      <div class="centered" style="width: 260px;"> 
+        <a id="linkButton" href="#" onClick="requestNewDashboard()" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only loginButton" style="display: block;" role="button"><span class="ui-button-text">Start</span> </a>
+      </div>
+    </div>
 </body>
 </html>
