Changing button text

--- a/public/dashboards/index.html
+++ b/public/dashboards/index.html
@@ -49,7 +49,7 @@ function requestNewDashboard() {
     <div style="top: 25%; width: 100%; position: absolute; margin: 0 auto">
       <img src="/dashboards/images/ascotLogoBig.png" class="centered" style="display: block"> 
       <div class="centered" style="width: 260px;"> 
-        <a id="linkButton" href="#" onClick="requestNewDashboard()" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only loginButton" style="display: block;" role="button"><span class="ui-button-text">Start</span> </a>
+        <a id="linkButton" href="#" onClick="requestNewDashboard()" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only loginButton" style="display: block;" role="button"><span class="ui-button-text">Create Dashboard</span> </a>
       </div>
     </div>
 </body>
