Changing button style

--- a/public/dashboards/index.html
+++ b/public/dashboards/index.html
@@ -56,36 +56,26 @@ function requestNewDashboard() {
   -o-transition: all 1s ease-in-out;
   -ms-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
+  border-color: #8560a6;
+  color: #ffffff;
+  background: #a29ac4;
 }
 
-#action a {
-width: 100%;
--webkit-box-sizing: border-box;
--moz-box-sizing: border-box;
-box-sizing: border-box;
-}
-
-.green .button.primary {
-border-color: #ffffff;
-color: #ffffff;
-background: #8560a6 url(/img/sheen.png) repeat-x;
-}
-
-.green a:link, .green a:visited {
-color: #8560a6;
+.button.primary:hover {
+  background: #917cb6;
 }
 
 .button {
-display: block;
-margin: auto;
-border-width: 1px;
-border-style: solid;
-font-weight: bold;
-text-transform: uppercase;
-text-shadow: 0 2px 0 rgba(0, 0, 0, 0.2);
--webkit-border-radius: 4px;
--moz-border-radius: 4px;
-border-radius: 4px;
+  display: block;
+  margin: auto;
+  border-width: 1px;
+  border-style: solid;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-shadow: 0 2px 0 rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
 }
 
 a:link, a:visited {
