--- a/public/dashboards/index.html
+++ b/public/dashboards/index.html
@@ -42,6 +42,7 @@ function requestNewDashboard() {
   height: 409px;
   margin: auto;
   padding-top: 40px;
+  margin-top: 100px;
   position: relative
 }
 
@@ -83,8 +84,8 @@ text-decoration: none;
 
 #logo {
   display: block;
-  width: 223px;
-  height: 97px;
+  width: 236px;
+  height: 96px;
   background-image: url(/dashboards/images/logoLogin.png);
   margin: auto;
   margin-bottom: 31px;
