Fixing small UI bugs

--- a/public/dashboards/index.html
+++ b/public/dashboards/index.html
@@ -118,8 +118,8 @@ body{
 <body class="green">
     <div id="container">
     <a href="http://ascot.astro.washington.edu/dashboards/" id="logo"></a>      
-    <a id="createDashboardButton" href="#" onClick="requestNewDashboard()" class="button primary" style="width: 150px; margin-top: 90px; padding: 15px"   role="button">
-        <span>Create Dashboard</span> 
+    <a id="createDashboardButton" href="#" onClick="requestNewDashboard()" class="button primary" style="width: 150px; margin-top: 90px; padding: 15px" role="button">
+        <span style="margin-left: 2px">Create Dashboard</span> 
     </a>
     <a href="http://www.astro.washington.edu/" id="departmentLogo"></a>      
 </body>
