--- a/public/gadgets/dataSetSelector.html
+++ b/public/gadgets/dataSetSelector.html
@@ -227,8 +227,7 @@ function datasetSelector(){
 </head>
 <body onLoad="init();">
 <div id="content">
-	<div id="divDataset_List">
-</div>
+	<div id="divDataset_List"></div>
 </div>
 </body>
 </html>
