--- a/public/gadgets/tableView.html
+++ b/public/gadgets/tableView.html
@@ -162,7 +162,7 @@ function dataTable(){
 </script>
 </head>
 <body onLoad="init();">
-<div id="content" class="yui-skin-sam" style="height: 0px">
+<div id="content" class="yui-skin-sam">
 	<div id="divSelectDataset" style="display: none">
   	Dataset: <select id="selDatasetName" onchange="myGadget.chooseDataset(this.options[this.selectedIndex].value);"></select>
   </div>
