--- a/public/gadgets/dataInquirer.html
+++ b/public/gadgets/dataInquirer.html
@@ -11,8 +11,9 @@
 <!-- ASCOT Basic Style Sheets -->
 <link href="/css/960/reset.css" rel="stylesheet" type="text/css">
 <link href="/css/960/text.css" rel="stylesheet" type="text/css"> 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
-
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js" type="text/javascript"></script>
+<script src="/js/underscore.js" type="text/javascript"></script>
+<script src="/js/backbone.js" type="text/javascript"></script>
 <script src="/js/astroObjectLib.js" type="text/javascript"></script>
 <script src="/js/helpers.js" type="text/javascript"></script> 
 
@@ -240,7 +241,8 @@ function GetData(){
 
         // create dataset
         ds = gadget.dashboard.createDataSet(id); 
-        ds.init(json);
+        ds.createIndex('color');
+        ds.addRecords(json);
         return ds;
         
     }
@@ -381,22 +383,17 @@ function GetData(){
 </head>
 <body>
 <div id="content" class="extraPadding">
-
 	<div id="divVPBounds" style="float: right">
 	    <div><b>Viewport Bounds</b></div>
 	    <div id="spViewportBounds" class="info"></div>
 	</div>
-
 	<div id="divQuery">
 	    Dataset Name: <input id="txtDatasetName" type="text" name="dataSetName" />
 	</div>
-	
 	<div id="divQueryButtons" style="margin-top: 10px; margin-bottom: 10px;"></div>
-	
 	<div id="divCatalog">
 		Catalog:  <select id="selCatalog"></select>
 	</div>
-	
 	<div id="divQueryBox" style="width:100%; margin-top: 10px;">
 		Query String: 
 		<br/> 
@@ -405,8 +402,6 @@ function GetData(){
 		<input id="btGetData" onclick="ga.getData();" type="button" value="Submit"/>  
 		<div id="divStatusText" style="display: inline; margin-left: 10px"></div> 
 	</div>
-
 </div>
-
 </body>
 </html>
