--- a/public/gadgets/tableView.html
+++ b/public/gadgets/tableView.html
@@ -10,8 +10,11 @@
 <!-- ASCOT Basic Style Sheets -->
 <link href="/css/960/reset.css" rel="stylesheet" type="text/css">
 <link href="/css/960/text.css" rel="stylesheet" type="text/css"> 
-<script src="/js/astroObjectLib.js" type="text/javascript"></script>
 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js" type="text/javascript"></script>
+<script src="/js/underscore.js" type="text/javascript"></script>
+<script src="/js/backbone.js" type="text/javascript"></script>
+<script src="/js/astroObjectLib.js" type="text/javascript"></script>
 
 <!-- Combo-handled YUI CSS files: -->
 <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?2.8.1/build/fonts/fonts-min.css&2.8.1/build/grids/grids-min.css&2.8.1/build/base/base-min.css&2.8.1/build/paginator/assets/skins/sam/paginator.css&2.8.1/build/datatable/assets/skins/sam/datatable.css">
@@ -71,7 +74,7 @@ function dataTable(){
             return;
         }
         var columnNames = sortColumns(ds.getColumns());     // custom column order for this table
-        var myDataSource = new YAHOO.util.DataSource(ds.getPoints());
+        var myDataSource = new YAHOO.util.DataSource(ds.getRecordsJSON());
         var myColumnDefs = [];
         for (var i=0, len=columnNames.length; i<len; i++) {
             var obj = {};
