--- a/public/gadgets/dataInquirer.html
+++ b/public/gadgets/dataInquirer.html
@@ -14,6 +14,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js" type="text/javascript"></script>
 <script src="/js/underscore.js" type="text/javascript"></script>
 <script src="/js/backbone.js" type="text/javascript"></script>
+<script src="/js/models.js" type="text/javascript"></script>
 <script src="/js/astroObjectLib.js" type="text/javascript"></script>
 <script src="/js/helpers.js" type="text/javascript"></script> 
 
