--- a/public/gadgets/nameResolver.html
+++ b/public/gadgets/nameResolver.html
@@ -13,6 +13,7 @@
 <!-- Astro scripts -->
 <script src="/js/underscore.js" type="text/javascript"></script>
 <script src="/js/backbone.js" type="text/javascript"></script>
+<script src="/js/models.js" type="text/javascript"></script>
 <script src="/js/astroObjectLib.js" type="text/javascript"></script>
 
 <!-- ASCOT Basic Style Sheets -->
