--- a/public/gadgets/dataSetSelector.html
+++ b/public/gadgets/dataSetSelector.html
@@ -18,17 +18,9 @@
 <script src="/js/astroObjectLib.js" type="text/javascript"></script>
 <script type="text/javascript">
 
-var dataSetList;
-var newDataSetName;
-
 // Creates gadget object
 gadget.init = function(callback){
-  initGadget();
-  callback();
-}
 
-function initGadget(){
-      
   gadget.dashboard.bind('dataSetChanged', updateDataSetList); 
    
   // Adds any new datasets in the public dataset list to this gadgets list
@@ -94,7 +86,12 @@ function initGadget(){
       checkBoxVisibility.type = "checkbox";
       checkBoxVisibility.id = "ckVis_" + dataSetId + "_" + color;
       colorRecords = dataSet.getIndex('color')[color]; 
-      checkBoxVisibility.checked = dataSet.getRecordMetaData(colorRecords[0]).get('visible');
+      if(colorRecords.length != 0){
+        checkBoxVisibility.checked = dataSet.getRecordMetaData(colorRecords[0]).get('visible');
+      }
+      else{
+        checkBoxVisibility.checked = true;
+      }
       checkBoxVisibility.value = color;
       checkBoxVisibility.onclick = function() {
         toggleDataSetColorVisibility(dataSetId, this.value, this.checked);
@@ -153,8 +150,9 @@ function initGadget(){
     dataSet.setRecordsMetaData({'visible': visible}, dataSet.getIndexEntries('color', color));
   }
 
+  callback();
 }
-
+      
 </script>
 </head>
 <body>
