--- a/public/dashboards/index.html
+++ b/public/dashboards/index.html
@@ -36,7 +36,7 @@ function requestNewDashboard() {
 }
 
 #container{
-  background-image: url(/dashboards/images/loginBox.png);
+  background-image: url(/images/loginBox.png);
   width: 538px;
   height: 409px;
   margin: auto;
@@ -85,7 +85,7 @@ text-decoration: none;
   display: block;
   width: 236px;
   height: 96px;
-  background-image: url(/dashboards/images/logoLogin.png);
+  background-image: url(/images/logoLogin.png);
   margin: auto;
   margin-bottom: 31px;
 }
@@ -97,7 +97,7 @@ text-decoration: none;
   left: 185px;
   width: 171px;
   height: 26px;
-  background-image: url(/dashboards/images/departmentLogo.png);
+  background-image: url(/images/departmentLogo.png);
 }
 
 
