--- a/public/gadgets/nameResolver.html
+++ b/public/gadgets/nameResolver.html
@@ -24,11 +24,11 @@
 
 // CONSTANTS
 // Status Icons
-var ICON_URL_SELECTED = '/gadgets/images/targetYellow.png';
-var ICON_URL_DEFAULT = '/gadgets/images/target.png';
-var ICON_URL_SPINNER = '/gadgets/images/spinnerGrey.gif';
-var ICON_URL_ERROR = '/gadgets/images/errorIcon.gif';
-var ICON_URL_SUCCESS = '/gadgets/images/successIcon.gif';
+var ICON_URL_SELECTED = '/images/targetYellow.png';
+var ICON_URL_DEFAULT = '/images/target.png';
+var ICON_URL_SPINNER = '/images/spinnerGrey.gif';
+var ICON_URL_ERROR = '/images/errorIcon.gif';
+var ICON_URL_SUCCESS = '/images/successIcon.gif';
 
 var ICON = { SUCCESS : ICON_URL_SUCCESS,
              ERROR : ICON_URL_ERROR,
