--- a/public/gadgets/skyView.html
+++ b/public/gadgets/skyView.html
@@ -198,19 +198,19 @@
       var iconUrl;     	
       switch(color){
         case "red":
-      	  iconUrl = "http://127.0.0.1/gadgets/images/targetRed.png";
+      	  iconUrl = "http://127.0.0.1/images/targetRed.png";
       		break;
       	case "green":
-      		iconUrl = "http://127.0.0.1/gadgets/images/targetGreen.gif";
+      		iconUrl = "http://127.0.0.1/images/targetGreen.gif";
       		break;
       	case "yellow":
-      		iconUrl = "http://127.0.0.1/gadgets/images/targetYellow.png";
+      		iconUrl = "http://127.0.0.1/images/targetYellow.png";
       		break;
       	case "blue":
-      		iconUrl = "http://127.0.0.1/gadgets/images/targetBlue.png";
+      		iconUrl = "http://127.0.0.1/images/targetBlue.png";
       		break;
       	default:
-      		iconUrl = "http://127.0.0.1/gadgets/images/targetGrey.png";
+      		iconUrl = "http://127.0.0.1/images/targetGrey.png";
       		break;
       }
       return iconUrl
