--- a/public/gadgets/dataInquirer.html
+++ b/public/gadgets/dataInquirer.html
@@ -57,11 +57,11 @@ function GetData(){
         PLOT_WIDTH = 300;
 
     // Status Icons
-    var ICON_URL_SELECTED = '/gadgets/images/target_yellow.png',
-        ICON_URL_DEFAULT = '/gadgets/images/target.png',
-        ICON_URL_SPINNER = '/gadgets/images/spinnerGrey.gif',
-        ICON_URL_ERROR = '/gadgets/images/errorIcon.gif',
-        ICON_URL_SUCCESS = '/gadgets/images/successIcon.gif';
+    var ICON_URL_SELECTED = '/images/targetYellow.png',
+        ICON_URL_DEFAULT = '/images/target.png',
+        ICON_URL_SPINNER = '/images/spinnerGrey.gif',
+        ICON_URL_ERROR = '/images/errorIcon.gif',
+        ICON_URL_SUCCESS = '/images/successIcon.gif';
 
     var ICON = { SUCCESS : ICON_URL_SUCCESS,
               ERROR : ICON_URL_ERROR,
