--- a/static/gadgets/histView.html
+++ b/static/gadgets/histView.html
@@ -9,7 +9,7 @@
 
 <!-- chart dependencies -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
-<script src="../js/highcharts/highcharts.js" type="text/javascript"></script>
+<script src="../highcharts/highcharts.js" type="text/javascript"></script>
 
 <!-- ASCOT Basic Style Sheets -->
 <link href="/css/960/reset.css" rel="stylesheet" type="text/css">
