--- a/static/gadgets/plotView.html
+++ b/static/gadgets/plotView.html
@@ -9,7 +9,7 @@
 
 <!-- chart dependencies -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript"></script>
-<script src="/js/highcharts.src.js" type="text/javascript"></script>
+<script src="/highcharts.src.js" type="text/javascript"></script>
 
 <!-- ASCOT Basic Style Sheets -->
 <link href="/css/960/reset.css" rel="stylesheet" type="text/css">
