--- a/static/gadgets/skyView.html
+++ b/static/gadgets/skyView.html
@@ -11,10 +11,10 @@
 	<link href="/css/960/text.css" rel="stylesheet" type="text/css"> 
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js"></script>
-  <script src="/js/underscore.js"></script>
-  <script src="/js/backbone.js"></script>
-  <script src="/js/models.js"></script>
-  <script src="/js/astroObjectLib.js"></script>	
+  <script src="/underscore.js"></script>
+  <script src="/backbone.js"></script>
+  <script src="/models.js"></script>
+  <script src="/astroMetaData.js"></script>	
   <script src="http://google.com/jsapi?key=ABQIAAAAVGHgv2pouycqhAw5tCmtChT2yXp_ZAY8_ufC3CFXhHIE1NvwkxSq6qELjXXLwllm-seMw-iKrnLcNQ" type="text/javascript"></script>
 	<script> 
    
@@ -201,7 +201,7 @@
       	  iconUrl = "http://127.0.0.1/images/targetRed.png";
       		break;
       	case "green":
-      		iconUrl = "http://127.0.0.1/images/targetGreen.gif";
+      		iconUrl = "http://127.0.0.1/images/targetGreen.png";
       		break;
       	case "yellow":
       		iconUrl = "http://127.0.0.1/images/targetYellow.png";
