--- a/static/gadgets/dataInquirer.html
+++ b/static/gadgets/dataInquirer.html
@@ -12,11 +12,11 @@
 <link href="/css/960/reset.css" rel="stylesheet" type="text/css">
 <link href="/css/960/text.css" rel="stylesheet" type="text/css"> 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js" type="text/javascript"></script>
-<script src="/js/underscore.js" type="text/javascript"></script>
-<script src="/js/backbone.js" type="text/javascript"></script>
-<script src="/js/models.js" type="text/javascript"></script>
-<script src="/js/astroObjectLib.js" type="text/javascript"></script>
-<script src="/js/helpers.js" type="text/javascript"></script> 
+<script src="/underscore.js" type="text/javascript"></script>
+<script src="/backbone.js" type="text/javascript"></script>
+<script src="/models.js" type="text/javascript"></script>
+<script src="/astroMetaData.js" type="text/javascript"></script>
+<script src="/helpers.js" type="text/javascript"></script> 
 
 <script type="text/javascript">
     
