--- a/static/gadgets/dataSetSelector.html
+++ b/static/gadgets/dataSetSelector.html
@@ -12,10 +12,10 @@
 
 <!-- Contains UW.astro objects -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js" type="text/javascript"></script>
-<script src="/js/underscore.js" type="text/javascript"></script>
-<script src="/js/backbone.js" type="text/javascript"></script>
-<script src="/js/models.js" type="text/javascript"></script>
-<script src="/js/astroObjectLib.js" type="text/javascript"></script>
+<script src="/underscore.js" type="text/javascript"></script>
+<script src="/backbone.js" type="text/javascript"></script>
+<script src="/models.js" type="text/javascript"></script>
+<script src="/astroMetaData.js" type="text/javascript"></script>
 <script type="text/javascript">
 
 // Creates gadget object
