--- a/static/gadgets/nameResolver.html
+++ b/static/gadgets/nameResolver.html
@@ -11,10 +11,10 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>  
   
 <!-- Astro scripts -->
-<script src="/js/underscore.js" type="text/javascript"></script>
-<script src="/js/backbone.js" type="text/javascript"></script>
-<script src="/js/models.js" type="text/javascript"></script>
-<script src="/js/astroObjectLib.js" type="text/javascript"></script>
+<script src="/underscore.js" type="text/javascript"></script>
+<script src="/backbone.js" type="text/javascript"></script>
+<script src="/models.js" type="text/javascript"></script>
+<script src="/astroMetaData.js" type="text/javascript"></script>
 
 <!-- ASCOT Basic Style Sheets -->
 <link href="/css/960/reset.css" rel="stylesheet" type="text/css">
@@ -36,7 +36,7 @@ var ICON = { SUCCESS : ICON_URL_SUCCESS,
              NONE : ""};
              
 function writeCoordinates(cc) {
-  showSuccess('<div style="display: inline; vertical-align:middle;"><b>Ra:</b>' + cc.getRa().toFixed(4) + "&deg Dec:" + cc.getDec().toFixed(4) + "&deg</div>");
+  showSuccess('<div style="display: inline; vertical-align:middle;"><b>Ra:</b>' + cc.get('ra').toFixed(4) + "&deg Dec:" + cc.get('dec').toFixed(4) + "&deg</div>");
   gadget.dashboard.notify("centerOfCoordinatesChanged",{'longitude': cc.getLongitude(), 'latitude': cc.getLatitude()});
 };
 
