--- a/static/gadgets/tableView.html
+++ b/static/gadgets/tableView.html
@@ -11,10 +11,10 @@
 <link href="/css/960/text.css" rel="stylesheet" type="text/css"> 
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js" type="text/javascript"></script>
-<script src="/js/underscore.js" type="text/javascript"></script>
-<script src="/js/backbone.js" type="text/javascript"></script>
-<script src="/js/models.js" type="text/javascript"></script>
-<script src="/js/astroObjectLib.js" type="text/javascript"></script>
+<script src="/underscore.js" type="text/javascript"></script>
+<script src="/backbone.js" type="text/javascript"></script>
+<script src="/models.js" type="text/javascript"></script>
+<script src="/astroMetaData.js" type="text/javascript"></script>
 
 <!-- Combo-handled YUI CSS files: -->
 <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?2.8.1/build/fonts/fonts-min.css&2.8.1/build/grids/grids-min.css&2.8.1/build/base/base-min.css&2.8.1/build/paginator/assets/skins/sam/paginator.css&2.8.1/build/datatable/assets/skins/sam/datatable.css">
