Cleaning up gadgets code

--- a/static/gadgets/ASCIIDataLoader.html
+++ b/static/gadgets/ASCIIDataLoader.html
@@ -13,8 +13,8 @@
 <script src="../js/highcharts/highcharts.js" type="text/javascript"></script>
 
 <!-- ASCOT Basic Style Sheets -->
-<link href="/css/960/reset.css" rel="stylesheet" type="text/css">
-<link href="/css/960/text.css" rel="stylesheet" type="text/css"> 
+<link href="/css/reset.css" rel="stylesheet" type="text/css">
+<link href="/css/text.css" rel="stylesheet" type="text/css"> 
 
 <script type="text/javascript">
 
