--- a/static/dashboards/index.html
+++ b/static/dashboards/index.html
@@ -5,10 +5,8 @@
 <meta name="description" content="Framework to develop online collaborative tools." />
 <meta http-equiv="Pragma" content="no-cache">
 
-<link rel="stylesheet" href="/css/960/reset.css"> 
+<link rel="stylesheet" href="/css/reset.css"> 
 <link rel="stylesheet" href="/css/dashboard.css">
-
-<link rel="stylesheet" href="/css/aristo/jquery-ui-1.8.7.custom.css">
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.11/jquery-ui.min.js"></script>
