--- a/static/gadgets/tableView.html
+++ b/static/gadgets/tableView.html
@@ -14,7 +14,7 @@
 <script src="/underscore.js" type="text/javascript"></script>
 <script src="/backbone.js" type="text/javascript"></script>
 <script src="/abstractDataModel.js" type="text/javascript"></script>
-<script src="/astroMetaData.js" type="text/javascript"></script>
+<script src="/metaDataModel.js" type="text/javascript"></script>
 
 <!-- Combo-handled YUI CSS files: -->
 <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?2.8.1/build/fonts/fonts-min.css&2.8.1/build/grids/grids-min.css&2.8.1/build/base/base-min.css&2.8.1/build/paginator/assets/skins/sam/paginator.css&2.8.1/build/datatable/assets/skins/sam/datatable.css">
