--- a/static/gadgets/scalableScatter.html
+++ b/static/gadgets/scalableScatter.html
@@ -162,8 +162,8 @@ function Plotter() {
   	 	var graphData = [];
   		var dsData = ds.getRecords();
    	for (i=0,len=dsData.length; i<len; i++) {
-   		var xVal = parseFloat(dsData[i].get(getSelectedXAxis()));
-   		var yVal = parseFloat(dsData[i].get(getSelectedYAxis()));
+   		var xVal = parseFloat(dsData[i][getSelectedXAxis()]);
+   		var yVal = parseFloat(dsData[i][getSelectedYAxis()]);
    		// each point has unique id so a pointer to point can be had by chart.get(id)
       	var id = dsData[i]["id"];
       	if (xVal !== NaN && yVal !== NaN){
